<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dictionary_dialog_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/dictionary_acknowledgements_label"
            android:paddingBottom="@dimen/dictionary_dialog_text_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_partner"
            android:paddingBottom="@dimen/dictionary_dialog_text_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_stack_overflow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_stack_overflow_link"
            android:autoLink="web"
            android:paddingBottom="@dimen/dictionary_dialog_text_padding"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_linux_manual" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_linux_manual_link"
            android:autoLink="web"
            android:paddingBottom="@dimen/dictionary_dialog_text_padding"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_developer_guide" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_developer_guide_link"
            android:autoLink="web"
            android:paddingBottom="@dimen/dictionary_dialog_text_padding"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_list_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_list_view_link"
            android:autoLink="web"
            android:layout_gravity="center" />

    </LinearLayout>

</ScrollView>